add docker + azure

--- a/src/app/@shared/components/toggle-dark-mode/toggle-dark-mode.component.html
+++ b/src/app/@shared/components/toggle-dark-mode/toggle-dark-mode.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center cursor-pointer w-1/12 bg-blue-500 dark:bg-slate-800 rounded-2xl w-full" (click)="toggleDarkMode()">
+<div class="flex items-center justify-center cursor-pointer bg-gray-500 dark:bg-slate-800 rounded-2xl w-full" (click)="toggleDarkMode()">
   <input type="checkbox" name="light-switch" class="light-switch sr-only" />
   <label class="relative p-2 cursor-pointer">
     <svg class="dark:hidden w-4 h-4" xmlns="http://www.w3.org/2000/svg">
