--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -53,13 +53,25 @@
   
       <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="multiple_files">Imagem dos produtos</label>
       <input (change)="processFilesSelected($event)" class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" id="multiple_files" type="file" multiple>
-  
-      @if(imageInForm){
+      
+      <!-- @if(imageInForm){
         <div class="flex flex-col items-center justify-center mr-3">
-            <img [src]="formEditProduct.controls['image'].value" alt="Imagens escolhidas" width="300" class="object-cover rounded-lg">
+            <img [src]="formEditProduct.controls['image'].value.preview" alt="Imagens escolhidas" width="300" class="object-cover rounded-lg">
             <button (click)="removeImage()" class="w-full bg-red-500 hover:bg-red-700 text-white font-bold rounded focus:outline-none focus:shadow-outline mt-1" type="button">
             <mat-icon class="scale-90">delete</mat-icon>
             </button>
+        </div>
+      } -->
+      @if(imagesPreview.length > 0){
+        <div class="mt-2 flex">
+          @for (image of formEditProduct.controls['image'].value; track image){
+            <div class="flex flex-col items-center justify-center mr-3">
+              <img src="{{image.preview}}" alt="Imagens escolhidas" width="200" class="object-cover rounded-lg">
+              <button (click)="removeImage(image)" class="w-full bg-red-500 hover:bg-red-700 text-white font-bold rounded focus:outline-none focus:shadow-outline mt-1" type="button">
+                <mat-icon class="scale-90">delete</mat-icon>
+              </button>
+            </div>
+          }
         </div>
       }
   
