--- a/src/app/products/components/list-products/list-products.component.html
+++ b/src/app/products/components/list-products/list-products.component.html
@@ -1,84 +1,51 @@
-<div class="mb-5 w-full flex justify-evenly">
-  <div class="w-8/12">
-    <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-      <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-      </svg>
-    </div>
-    <input (keyup)="applyFilter($event)" type="search" class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" #input placeholder="Digite o produto..." required />
-  </div>
-  <button (click)="openDialogCreateProduct()" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded dark:bg-slate-600 dark:border-slate-800 dark:hover:border-slate-950 dark:hover:bg-slate-800">
-    Adicionar
-  </button>
-</div>
 
+<mat-table #table [dataSource]="dataSource">
 
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg border border-gray-400 table-fixed dark:bg-slate-600">
-  <table mat-table [dataSource]="dataSource" class="fixed-table mat-elevation-z8 w-full h-full">
+  <ng-container matColumnDef="cod">
+      <mat-header-cell *matHeaderCellDef>Cod .</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.id | truncate: 6}} </mat-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="cod">
-      <th mat-header-cell class="thead" *matHeaderCellDef> <strong>COD</strong> </th>
-      <td mat-cell *matCellDef="let element"> {{element.id | truncate:6 }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="image">
-      <th mat-header-cell class="thead" *matHeaderCellDef> <strong>IMAGEM</strong> </th>
-      <td mat-cell *matCellDef="let element">
+  <ng-container matColumnDef="image">
+      <mat-header-cell *matHeaderCellDef> Imagem </mat-header-cell>
+      <mat-cell *matCellDef="let element">
         @if(element.image){
-          <img [src]="element.image" alt="Imagem do produto" class="w-10 h-10 object-cover rounded-lg">
+          <img [src]="element.image" alt="Imagem do produto" width="60" height="60" class="object-cover rounded-lg">
         }
-        
-      </td>
-    </ng-container>
+      </mat-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell class="thead" *matHeaderCellDef> <strong>NOME</strong> </th>
-      <td mat-cell *matCellDef="let element" class="text-center"> {{element.name}} </td>
-    </ng-container>
+  <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+  </ng-container>
 
-    <!-- <ng-container matColumnDef="category">
-      <th mat-header-cell class="thead" *matHeaderCellDef> <strong>CATEGORIA</strong> </th>
-      <td mat-cell *matCellDef="let element"> {{element.category}} </td>
-    </ng-container> -->
+  <ng-container matColumnDef="price">
+      <mat-header-cell *matHeaderCellDef> Preço </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.price | currency:'BRL' }} </mat-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="price">
-      <th mat-header-cell class="thead" *matHeaderCellDef> <strong>PREÇO</strong> </th>
-      <td mat-cell *matCellDef="let element" class="text-center"> {{element.price}} </td>
-    </ng-container>
+  <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> Ações </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+          <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+    
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="openDialogEditProduct(element)">
+                Alterar
+              </button>
+    
+              <button disabled="true" mat-menu-item>
+                Excluir
+              </button>
+    
+            </mat-menu>
+      </mat-cell>
+  </ng-container>
 
-    <ng-container matColumnDef="actions" >
-      <th mat-header-cell class="thead" *matHeaderCellDef aria-label="área de ações"></th>
-      <td mat-cell *matCellDef="let element">
-        <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-          <mat-icon>more_vert</mat-icon>
-        </button>
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="openDialogEditProduct(element)">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 fill-blue-500 inline">
-              <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z" />
-            </svg>
-            Alterar
-          </button>
-
-          <button disabled="true" mat-menu-item>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 fill-red-800 inline">
-              <path fill-rule="evenodd" d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z" clip-rule="evenodd" />
-            </svg>
-            Excluir
-          </button>
-
-        </mat-menu>
-      </td>
-    </ng-container>
-
-
-    <tr mat-header-row class="thead" *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    <tr class="mat-row m-5" *matNoDataRow>
-      <td class="mat-cell  text-2xl text-center" colspan="4">NENHUM PRODUTO ENCONTRADO</td>
-    </tr>
-
-  </table>
-</div>
+</mat-table>
