--- a/src/app/products/page/product-page.component.html
+++ b/src/app/products/page/product-page.component.html
@@ -1,9 +1,38 @@
-@if(loadingProductCreateOrUpdate){
-    <app-spinner></app-spinner>
-}@else{
+<div class="mb-5 w-full flex justify-between items-center">
+    <div class="w-4/5 flex items-center border border-solid rounded-lg">
+        <div class="p-2 w-full">
+            <input [(ngModel)]="searchProductParams.name" type="search" class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" #input placeholder="Digite o produto..." required />
+        </div>
+        <div class="w-1/3">
+            <select (change)="SelectCategoryBySearch($event)" class="block w-full p-4 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" #select>
+                <option selected value="all">Todas as Categorias</option>
+                @for(category of categories; track category.id){
+                    <option [value]="category.id">{{category.name}}</option>
+                }
+            </select>
+        </div>
+        <div class="p-2">
+            <button (click)="applyFilter()" class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+                Buscar
+            </button>
+        </div>
+    </div>
+
+    <button (click)="openDialogCreateProduct()" class="ml-5 h-12 bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+        Adicionar
+    </button>
+</div>
+
+<div class="border border-solid border-gray-200 max-h-full">
     <app-list-products
-        (createProductEvent)="receivesProductCreate($event)"
-        (deleteProductEvent)="receivesProductDelete($event)"
+        [productsList]="products.items"
         (editProductEvent)="receivesProductEdit($event)">
     </app-list-products>
-}
+</div>
+
+<div class="border border-solid border-gray-200">
+    <app-paginator
+        [totalItems]="products.total"
+        (changePage)="receivesPageEvent($event)"
+    ></app-paginator>
+</div>
