--- a/src/app/root-category/components/list-sub-category/list-sub-category.component.html
+++ b/src/app/root-category/components/list-sub-category/list-sub-category.component.html
@@ -2,7 +2,7 @@
 
   <div class="flex justify-between items-center mb-5">
     <h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Subcategorias</h5>
-    <button (click)="openModalCreateSubCategory()" class="w-50 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Criar Subcategoria</button>
+    <button (click)="openModalCreateSubCategory()" class="w-50 bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">Criar Subcategoria</button>
   </div>
     
   @for (subCategory of subCategories; track subCategory.id){
