--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,23 @@
 @use '@angular/material' as mat;
 
 @include mat.core();
-$test-angular-primary: mat.define-palette(mat.$indigo-palette);
-$test-angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$ecommerce-clients-primary: mat.define-palette(mat.$indigo-palette);
+$ecommerce-clients-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 
-$test-angular-warn: mat.define-palette(mat.$red-palette);
+$ecommerce-clients-warn: mat.define-palette(mat.$red-palette);
 
-$test-angular-theme: mat.define-light-theme((
+$ecommerce-clients-theme: mat.define-light-theme((
   color: (
-    primary: $test-angular-primary,
-    accent: $test-angular-accent,
-    warn: $test-angular-warn,
+    primary: $ecommerce-clients-primary,
+    accent: $ecommerce-clients-accent,
+    warn: $ecommerce-clients-warn,
   ),
   typography: mat.define-typography-config(),
   density: 0
 ));
 
-@include mat.all-component-themes($test-angular-theme);
+@include mat.all-component-themes($ecommerce-clients-theme);
 
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
 
@@ -27,7 +27,12 @@ $test-angular-theme: mat.define-light-theme((
 
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: var(--primary);
+  color: var(--text);
+}
 
 
 ::-webkit-scrollbar {
