--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -62,16 +62,14 @@
             </button>
         </div>
       } -->
-      @if(imagesPreview.length > 0){
+      @if(imagePreview){
         <div class="mt-2 flex">
-          @for (image of formEditProduct.controls['image'].value; track image){
             <div class="flex flex-col items-center justify-center mr-3">
-              <img src="{{image.preview}}" alt="Imagens escolhidas" width="200" class="object-cover rounded-lg">
-              <button (click)="removeImage(image)" class="w-full bg-red-500 hover:bg-red-700 text-white font-bold rounded focus:outline-none focus:shadow-outline mt-1" type="button">
+              <img src="{{imagePreview.preview}}" alt="Imagens escolhidas" width="200" class="object-cover rounded-lg">
+              <button (click)="removeImage(imagePreview)" class="w-full bg-red-500 hover:bg-red-700 text-white font-bold rounded focus:outline-none focus:shadow-outline mt-1" type="button">
                 <mat-icon class="scale-90">delete</mat-icon>
               </button>
             </div>
-          }
         </div>
       }
   
