--- a/src/app/products/components/create-product/create-product.component.html
+++ b/src/app/products/components/create-product/create-product.component.html
@@ -58,7 +58,7 @@
       <div class="mt-2 flex">
           <div class="flex flex-col items-center justify-center mr-3">
             <img src="{{imagePreview.preview}}" alt="Imagens escolhidas" width="200" class="object-cover rounded-lg">
-            <button (click)="removeImage()" class="w-full bg-red-500 hover:bg-red-700 text-white font-bold rounded focus:outline-none focus:shadow-outline mt-1" type="button">
+            <button (click)="removeImage(imagePreview)" class="w-full bg-red-500 hover:bg-red-700 text-white font-bold rounded focus:outline-none focus:shadow-outline mt-1" type="button">
               <mat-icon class="scale-90">delete</mat-icon>
             </button>
           </div>
