--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -62,7 +62,7 @@
             </button>
         </div>
       } -->
-      @if(imagePreview){
+      @if(imagePreview?.preview){
         <div class="mt-2 flex">
             <div class="flex flex-col items-center justify-center mr-3">
               <img src="{{imagePreview.preview}}" alt="Imagens escolhidas" width="200" class="object-cover rounded-lg">
